cicd/services/forgejo/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-ingress
  namespace: forgejo
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`forgejo.home.arpa`)
      kind: Rule
      services:
        - name: forgejo-http
          port: 3000
    - match: Host(`registry.home.arpa`)
      kind: Rule
      services:
        - name: forgejo-http
          port: 3000
